--- a/x86_ansible/playbook.yml
+++ b/x86_ansible/playbook.yml
@@ -92,3 +92,8 @@
         daemon_reload: yes
         state: restarted
         enabled: yes
+
+    # Install Calico
+    - name: Install Calico operator
+      ansible.builtin.command:
+        cmd: kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml
