Fix k3s+crio configuration

--- a/nodes/x86_ansible/k3s.service
+++ b/nodes/x86_ansible/k3s.service
@@ -12,7 +12,8 @@ ExecStart=/usr/local/bin/k3s server \
   --flannel-backend=none \
   --disable-network-policy \
   --disable=traefik \
-  --container-runtime-endpoint=unix:///var/run/crio/crio.sock
+  --container-runtime-endpoint=unix:///var/run/crio/crio.sock \
+  --kubelet-arg cgroup-driver="systemd"
 # --cluster-cidr=192.168.0.0/16
 KillMode=process
 Delegate=yes
