--- a/nodes/ansible/playbook.yml
+++ b/nodes/ansible/playbook.yml
@@ -98,3 +98,8 @@
         daemon_reload: yes
         state: restarted
         enabled: yes
+
+    # Pull k3os image
+    # Mount k3os image
+    # Copy in config files
+    #- name: yes
