--- a/nodes/ansible/site.yml
+++ b/nodes/ansible/site.yml
@@ -40,20 +40,12 @@
     - name: Install gpg
       ansible.builtin.apt:
         name: gpg
-        state: latest
-
-    - name: Install CRI-O repository keys
-      ansible.builtin.apt_key:
-        url: "{{ item }}"
         state: present
-      loop:
-        - "https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable:cri-o:{{ k8s_version }}/Debian_11/Release.key"
-        - "https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable/Debian_11/Release.key"
 
     - name: Install CRI-O repositories
       ansible.builtin.apt_repository:
         repo: "{{ item }}"
-        state: present
+        state: absent
       loop:
         - "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Debian_11/ /"
 
@@ -66,13 +58,13 @@
           - cri-o
           - cri-o-runc
         update_cache: yes
-        state: latest
+        state: absent
 
     - name: Enable and restart crio service
       ansible.builtin.systemd:
         name: crio
-        state: restarted
-        enabled: yes
+        state: stopped
+        enabled: no
 
     # Install k3s https://github.com/k3s-io/k3s-ansible
     - name: Download k3s binary
