--- a/hello-world/service.yaml
+++ b/hello-world/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: hello-world
 spec:
-  type: NodePort
+  type: LoadBalancer
+  externalTrafficPolicy: Local
   selector:
     app: hello-world
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-      nodePort: 30080
