--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -1,9 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: hello-world
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: site
 spec:
   rules:
   - host: hello-world.jlh.name
