--- a/hello-world/pod.yaml
+++ b/hello-world/pod.yaml
@@ -10,3 +10,14 @@ spec:
     image: nginx:1.14.2
     ports:
     - containerPort: 80
+    volumeMounts:
+    - name: html
+      mountPath: /usr/share/nginx/html
+      readOnly: true
+  volumes:
+    - name: html
+      configMap:
+        name: hello-world
+        items:
+        - key: index.html
+          path: index.html
