--- a/unifi/values.yaml
+++ b/unifi/values.yaml
@@ -93,7 +93,7 @@ ingress:
   # -- Enable and configure ingress settings for the chart under this key.
   # @default -- See values.yaml
   main:
-    enabled: true
+    enabled: false
     annotations:
       nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 
@@ -108,7 +108,7 @@ ingress:
 
     hosts:
       -  ## Host address. Helm template can be passed.
-        host: unifi.jlh.name
+        host:
         ## Configure the paths for the host
         paths:
           -  ## Path. Helm template can be passed.
