--- a/cert-manager/secrets.yaml.example
+++ b/cert-manager/secrets.yaml.example
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cloudflare-api-token-secret
+    namespace: cert-manager
 type: Opaque
 stringData:
   api-token: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
