Send smultronfeet cert to production

--- a/cert-manager/smultronfeet-nu.yaml
+++ b/cert-manager/smultronfeet-nu.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   secretName: smultronfeet-nu-tls
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt
     kind: ClusterIssuer
   dnsNames:
   - smultronfeet.nu
