--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -77,6 +77,15 @@ spec:
             name: cloud-external
             port:
               number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: proxmox
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+spec:
+  rules:
   - host: pve.jlh.name
     http:
       paths:
@@ -86,7 +95,7 @@ spec:
           service:
             name: pve-external
             port:
-              number: 80
+              number: 8006
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
