--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -26,6 +26,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: site
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 100g
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
 spec:
   tls:
   - hosts:
