--- a/applications/application_set/application_set.yaml
+++ b/applications/application_set/application_set.yaml
@@ -20,5 +20,5 @@ spec:
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: in-cluster
+        server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
