--- a/applications/application-set/application_set.yaml
+++ b/applications/application-set/application_set.yaml
@@ -20,5 +20,5 @@ spec:
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: https://kubernetes.default.svc
+        name: in-cluster
         namespace: '{{path.basename}}'
