--- a/applications/application-set/application_set.yaml
+++ b/applications/application-set/application_set.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: h5b-apps
-  namespace: argocd
+  namespace: application-set
 spec:
   generators:
   - git:
