dont use default storage class

--- a/applications/home-assistant/manifest.yaml
+++ b/applications/home-assistant/manifest.yaml
@@ -55,6 +55,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: config
 spec:
+  storageClassName: nfs-freenas
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
