Enable more automation in Argo

--- a/applications/argocd/application_set.yaml
+++ b/applications/argocd/application_set.yaml
@@ -22,3 +22,7 @@ spec:
       destination:
         name: in-cluster
         namespace: '{{path.basename}}'
+      syncPolicy:
+        automated:
+        syncOptions:
+          - CreateNamespace=true
