Fix automated sync

--- a/applications/argocd/application_set.yaml
+++ b/applications/argocd/application_set.yaml
@@ -23,6 +23,6 @@ spec:
         name: in-cluster
         namespace: '{{path.basename}}'
       syncPolicy:
-        automated:
+        automated: {}
         syncOptions:
           - CreateNamespace=true
