Fix DNS on alpine, AGAIN

--- a/applications/backup-duplicacy/cronjob-backup.yaml
+++ b/applications/backup-duplicacy/cronjob-backup.yaml
@@ -28,5 +28,9 @@ spec:
               secret:
                 secretName: ditto-ssh-key
                 defaultMode: 0400
+          dnsConfig: # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
+            options:
+              - name: ndots
+                value: "1"
 
           restartPolicy: OnFailure
