--- a/applications/home-assistant/manifest.yaml
+++ b/applications/home-assistant/manifest.yaml
@@ -45,7 +45,7 @@ spec:
         - name: config
           persistentVolumeClaim:
             claimName: config
-      dnsConfig:  # Fix DNS resolution in Alpine 3.11 https://github.com/gliderlabs/docker-alpine/issues/539
+      dnsConfig:  # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
         options:
           - name: ndots
             value: "1"
