Try using https

--- a/applications/monitoring/kibana.yaml
+++ b/applications/monitoring/kibana.yaml
@@ -13,6 +13,7 @@ kind: Ingress
 metadata:
   name: kibana
   annotations:
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   tls:
   - hosts:
