--- a/applications/monitoring/kibana.yaml
+++ b/applications/monitoring/kibana.yaml
@@ -11,6 +11,8 @@ spec:
     tls:
       selfSignedCertificate:
         disabled: true
+  config:
+    server.publicBaseUrl: https://kibana.jlh.name
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
