--- a/applications/nfs-subdir-external-provisioner/values.yaml
+++ b/applications/nfs-subdir-external-provisioner/values.yaml
@@ -36,13 +36,10 @@ storageClass:
   # Method used to reclaim an obsoleted volume
   reclaimPolicy: Delete
 
-  # When set to false your PVs will not be archived by the provisioner upon deletion of the PVC.
-  archiveOnDelete: true
-
   # If it exists and has 'delete' value, delete the directory. If it exists and has 'retain' value, save the directory.
   # Overrides archiveOnDelete.
   # Ignored if value not set.
-  onDelete:
+  onDelete: delete
 
   # Specifies a template for creating a directory path via PVC metadata's such as labels, annotations, name or namespace.
   # Ignored if value not set.
