--- a/applications/monitoring/fluentd-daemonset.yaml
+++ b/applications/monitoring/fluentd-daemonset.yaml
@@ -60,7 +60,7 @@ spec:
       containers:
       - name: fluentd
         # stand 10.08.2020
-        image: fluent/fluentd-kubernetes-daemonset:v1.11.2-debian-elasticsearch7-1.0
+        image: fluent/fluentd-kubernetes-daemonset:v1.14-debian-elasticsearch7-1
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
             value: monitoring-es-http
