--- a/applications/grafana-ingress/ingress.yaml
+++ b/applications/grafana-ingress/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
+  namespace: loki-stack
   annotations:
 spec:
   tls:
@@ -16,7 +17,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: loki-grafana
+            name: loki-stack-grafana
             port:
               number: 80
 
