--- a/applications/loki-stack/charts/promtail/values.yaml
+++ b/applications/loki-stack/charts/promtail/values.yaml
@@ -105,7 +105,18 @@ resources: {}
 scrapeConfigs: []
 
 # Custom scrape_configs together with the default ones in the configmap
-extraScrapeConfigs: []
+extraScrapeConfigs:
+  - job_name: journal
+      journal:
+        path: /var/log/journal
+        max_age: 12h
+        labels:
+          job: systemd-journal
+      relabel_configs:
+        - source_labels: [ '__journal__systemd_unit' ]
+          target_label: 'unit'
+        - source_labels: [ '__journal__hostname' ]
+          target_label: 'hostname'
 
 securityContext:
   readOnlyRootFilesystem: true
@@ -133,7 +144,10 @@ volumes:
     path: /var/log/pods
 
 # Custom volumes together with the default ones
-extraVolumes: []
+extraVolumes:
+  - name: journal # Mount journal directory into Promtail pods
+    hostPath:
+      path: /var/log/journal
 
 volumeMounts:
 - name: docker
@@ -144,7 +158,10 @@ volumeMounts:
   readOnly: true
 
 # Custom volumeMounts together with the default ones
-extraVolumeMounts: []
+extraVolumeMounts:
+  - name: journal
+    mountPath: /var/log/journal
+    readOnly: true
 
 # Add extra Commandline args while starting up promtail.
 # more info : https://github.com/grafana/loki/pull/1530
