--- a/applications/argocd/kustomization.yaml
+++ b/applications/argocd/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: argocd
+namespace: argocd
 
 resources:
 - namespace.yaml
