--- a/applications/loki-stack/helm_application_argocd.yaml
+++ b/applications/loki-stack/helm_application_argocd.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: loki-stack
-  namespace: loki-stack
+  name: loki-stack-helm
+  namespace: argocd
 spec:
   project: default
   source:
