--- a/applications/loki-stack/helm_application_argocd.yaml
+++ b/applications/loki-stack/helm_application_argocd.yaml
@@ -15,4 +15,4 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: loki-stack
