--- a/applications/argocd/kustomization.yaml
+++ b/applications/argocd/kustomization.yaml
@@ -17,7 +17,7 @@ patchesJson6902:
   patch: |-
     - op: add
       path: /metadata/annotations
-      value: {"prometheus.io/scrape": "true"}
+      value: [ {"prometheus.io/scrape": "true"},
       {"prometheus.io/path": "/metrics"},
       {"prometheus.io/port": "8080"},
     ]
