--- a/applications/monitoring/grafana/grafana_ingress.yaml
+++ b/applications/monitoring/grafana/grafana_ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
-  namespace: loki-stack
+  namespace: monitoring-loki-stack
   annotations:
 spec:
   tls:
