--- a/applications/monitoring/grafana/grafana_ingress.yaml
+++ b/applications/monitoring/grafana/grafana_ingress.yaml
@@ -26,6 +26,8 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: grafana-jlh-name
+  namespace: monitoring-loki-stack
+
 spec:
   secretName: grafana-jlh-name-tls
   issuerRef:
