--- a/applications/argocd-install-ingress-nginx/ingress-nginx-application.yaml
+++ b/applications/argocd-install-ingress-nginx/ingress-nginx-application.yaml
@@ -9,7 +9,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
   syncPolicy:
-    automated: {}
+    automated:
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
   source:
