--- a/applications/photoprism/ingress.yaml
+++ b/applications/photoprism/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 kind: Ingress
 metadata:
   annotations:
@@ -6,7 +6,6 @@ metadata:
     # Default is very low so most photo uploads will fail
     nginx.ingress.kubernetes.io/proxy-body-size: "512M"
     certmanager.k8s.io/cluster-issuer: letsencrypt-staging
-    kubernetes.io/tls-acme: "true"
   name: photoprism
 spec:
   rules:
