--- a/applications/photoprism/manifest.yaml
+++ b/applications/photoprism/manifest.yaml
@@ -26,7 +26,7 @@ spec:
         - name: PHOTOPRISM_EXPORT_PATH
           value: /assets/photos/export
         - name: PHOTOPRISM_ORIGINALS_PATH
-          vale: /assets/photos/originals
+          value: /assets/photos/originals
         - name: PHOTOPRISM_DATABASE_DRIVER
           value: mysql
         - name: PHOTOPRISM_HTTP_HOST
