Set root pw for photoprism db

--- a/applications/photoprism/photoprism-database-application.yaml
+++ b/applications/photoprism/photoprism-database-application.yaml
@@ -23,3 +23,5 @@ spec:
           value: "photoprism"
         - name: "auth.password"
           value: "photoprism"
+        - name: "auth.rootPassword"
+          value: "fh64wEVpEOuQEN7FsdlL"
