Fix photoprism ingress 4

--- a/applications/photoprism/ingress.yaml
+++ b/applications/photoprism/ingress.yaml
@@ -17,7 +17,8 @@ spec:
         backend:
           service:
             name: photoprism
-            port: http
+            port:
+              name: http
 
   tls:
   - hosts:
