Promote photoprism cert to LE-prod

--- a/applications/photoprism/ingress.yaml
+++ b/applications/photoprism/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     # Default is very low so most photo uploads will fail
     nginx.ingress.kubernetes.io/proxy-body-size: "512M"
-    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
+    certmanager.k8s.io/cluster-issuer: letsencrypt
   name: photoprism
 spec:
   rules:
