--- a/applications/photoprism/ingress.yaml
+++ b/applications/photoprism/ingress.yaml
@@ -5,7 +5,6 @@ metadata:
     kubernetes.io/ingress.class: nginx
     # Default is very low so most photo uploads will fail
     nginx.ingress.kubernetes.io/proxy-body-size: "512M"
-    certmanager.k8s.io/cluster-issuer: letsencrypt
   name: photoprism
 spec:
   rules:
@@ -19,8 +18,19 @@ spec:
             name: photoprism
             port:
               name: http
-
   tls:
   - hosts:
     - photos.jlh.name
     secretName: photoprism-cert
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: photos-jlh-name
+spec:
+  secretName: photoprism-cert
+  issuerRef:
+    name: letsencrypt
+    kind: ClusterIssuer
+  dnsNames:
+  - photos.jlh.name
