--- a/applications/tmeit/rbac.yaml
+++ b/applications/tmeit/rbac.yaml
@@ -11,3 +11,24 @@ metadata:
     kubernetes.io/service-account.name: "gh-actions-deploy"
 type: kubernetes.io/service-account-token
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: gh-actions-deploy
+rules:
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["pods"]
+  verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: gh-actions-deploy
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: tmeit
+roleRef:
+  kind: Role
+  name: gh-actions-deploy
+  apiGroup: rbac.authorization.k8s.io
