Give tmeit deploy sa access to kubegres and sealedsecrets

--- a/applications/tmeit/rbac.yaml
+++ b/applications/tmeit/rbac.yaml
@@ -17,13 +17,19 @@ metadata:
   name: gh-actions-deploy
 rules:
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["pods", "services"]
+  resources: ["pods", "services", "configmaps"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["apps"]
   resources: ["deployments"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 - apiGroups: ["networking.k8s.io"]
   resources: ["networkpolicies"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["bitnami.com"]
+  resources: ["sealedsecrets"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["kubegres.reactive-tech.io"]
+  resources: ["kubegres"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 
 ---
